--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^10.0.6",
-    "socket.io-client": "^4.8.0"
+    "socket.io-client": "^4.8.0",
+    "framer-motion": "^12.4.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
