--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^7.1.5",
     "react-toastify": "^10.0.6",
     "socket.io-client": "^4.8.0",
-    "framer-motion": "^12.4.7"
+    "framer-motion": "^12.4.7",
+    "react-top-loading-bar": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
