--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^10.0.6",
+    "react-top-loading-bar": "^3.0.2",
     "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
