--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,7 @@
     "react-toastify": "^10.0.6",
     "react-top-loading-bar": "^3.0.2",
     "socket.io-client": "^4.8.0",
-    "framer-motion": "^12.4.7",
-    "react-top-loading-bar": "^3.0.2"
+    "framer-motion": "^12.4.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
