--- a/client/package.json
+++ b/client/package.json
@@ -13,15 +13,15 @@
     "@emailjs/browser": "^4.4.1",
     "aos": "^2.3.4",
     "axios": "^1.7.9",
+    "framer-motion": "^12.4.7",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^10.0.6",
-    "socket.io-client": "^4.8.0",
-    "framer-motion": "^12.4.7",
-    "react-top-loading-bar": "^3.0.2"
+    "react-top-loading-bar": "^3.0.2",
+    "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
